<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.lab2.ui.notifications.AdChildViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200">


            <com.google.android.material.textfield.TextInputLayout
                android:textSize="@dimen/nameSize"
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textSize="@dimen/nameSize"
                android:id="@+id/outlinedTextField2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:textSize="@dimen/nameSize"
                android:id="@+id/textView8"
                android:layout_marginTop="@dimen/margin_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayoutAvatarList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/scorePadding"
                app:columnCount="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

            </androidx.gridlayout.widget.GridLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>